--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "url": ""
   },
   "scripts": {
-	"dev": "vite",
-	"build": "vite build"
+    "dev": "vite",
+    "build": "vite build"
   },
   "author": "ukonpower",
   "bugs": {
@@ -37,10 +37,11 @@
   },
   "dependencies": {
     "@tweakpane/core": "^1.1.0",
-    "ore-three": "^4.0.0-beta1",
+    "lethargy": "^1.0.9",
     "rollup-plugin-glslify": "^1.3.1",
     "three": "^0.145.0",
     "tweakpane": "^3.1.0",
-    "vite": "^3.1.8"
+    "vite": "^3.1.8",
+    "wolfy87-eventemitter": "^5.2.9"
   }
 }
