--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/ts/libs/ore-three"]
 	path = src/ts/libs/ore-three
-	url = git@github.com:ukonpower/ore-three.git
+	url = https://github.com/ukonpower/ore-three.git
