--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "target": "es6",
     "module": "es2015",
     "moduleResolution": "node",
+	"allowSyntheticDefaultImports": true,
+	"resolveJsonModule": true,
     "lib": [
       "es2017",
       "dom"
@@ -13,7 +15,8 @@
     "rootDir": "./",
 	"baseUrl": ".",
 	"paths": {
-		"ore-three" : ["./src/ts/libs/ore-three/packages/ore-three/src"]
+		"ore-three" : ["./src/ts/libs/ore-three/packages/ore-three/src"],
+		"glpower" : ["./src/ts/libs/glpower/packages/glpower/src"],
 	}
   },
   "include": ["./src/"]
